start making it all work

--- a/testsite/app/templates/_nav.html
+++ b/testsite/app/templates/_nav.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="/">Flask-Social Example</a>
+      <a class="brand" href="/">the-neighborhoods-project</a>
       <ul class="nav">
         <li><a href="{{ url_for('index') }}">Home</a></li>
         {%- if current_user.is_authenticated() -%}
@@ -11,10 +11,6 @@
         <li><a href="{{ url_for('security.login') }}">Log in</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
         {%- endif -%}
-      </ul>
-      <ul class="nav pull-right github">
-        <li><iframe src="http://ghbtns.com/github-btn.html?user=mattupstate&type=follow"
-  allowtransparency="true" frameborder="0" scrolling="0" width="143px" height="20px"></iframe></li>
       </ul>
     </div>
   </div>
