--- a/testsite/app/templates/index.html
+++ b/testsite/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends '/layouts/boilerplate.html' %}
 
-{% block body_class %}main main-index{% endblock %}
+{% block body_class %}main main-index map{% endblock %}
 
 {% block layout %}
   <div class="hero-unit">
