--- a/testsite/app/templates/layouts/boilerplate.html
+++ b/testsite/app/templates/layouts/boilerplate.html
@@ -44,8 +44,7 @@
     {% include "_messages.html" -%}
     {% block layout %}{% endblock -%}
     <footer class="footer">
-      <p>Copyright &copy; 2012 by Matt Wright</p>
-      <p>This site uses <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>. You can also <a href="http://www.github.com/mattupstate/flask-social-example">view the source code.</a></p>
+      <p>This site uses <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>, leaflet, tiger data, flask. You can also <a href="https://github.com/blackmad/the-neighborhoods-project">view the source code.</a></p>
     </footer>
   </div>
 </body>
