--- a/testsite/app/templates/layouts/boilerplate.html
+++ b/testsite/app/templates/layouts/boilerplate.html
@@ -9,17 +9,29 @@
   <title>Flask-Social Example {{ page_title }}</title>
   <meta name="description" content="A working example of the Flask-Social extension for Flask, a web microframework written in Python">
   <meta name="viewport" content="width=device-width">
+  <link href="/static/css/combobox.css" rel="stylesheet" media="screen">
   <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
   <link href="/static/css/bootstrap.map.css" rel="stylesheet" media="screen">
   <link href="/static/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   <link rel="stylesheet" href="/static/css/leaflet.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
       <![endif]-->
   <script src="/static/js/jquery-1.9.1.min.js"></script>
+  <script src="/static/js/jquery-migrate-1.1.1.min.js"></script>
   <script src="/static/js/leaflet.js"></script>
   <script src="/static/js/underscore-min.js"></script>
   <script src="/static/js/backbone.js"></script>
+  <!--<script src="/static/js/jquery.ui.core.min.js"></script>
+  <script src="/static/js/jquery.ui.widget.min.js"></script>
+  <script src="/static/js/jquery.ui.menu.min.js"></script>
+  <script src="/static/js/jquery.ui.button.min.js"></script>
+  <script src="/static/js/jquery.ui.position.min.js"></script>
+  <script src="/static/js/jquery.ui.autocomplete.min.js"></script>-->
+  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+
+  <script src="/static/js/combobox.js"></script>
   <script src="/static/js/editor.js"></script>
 
   <script src="/static/js/bootstrap.min.js"></script>
