make voting in the block UI mostly work

--- a/testsite/app/templates/index.html
+++ b/testsite/app/templates/index.html
@@ -4,8 +4,8 @@
 
 {% block layout %}
   <div class="hero-unit">
-    <h1>Welcome</h1>
-    <p>
+    <h1>Crowdsourcing Neighborhoods</h1>
+    <!--<p>
       This site illustrates the functionality provided by the <strong>Flask-Social</strong>
       extension for <strong>Flask</strong>.
     </p>
@@ -15,6 +15,7 @@
       <a class="btn btn-primary btn-large" href="http://packages.python.org/Flask-Security"><i class="icon-list-alt icon-white"></i> Flask-Security Documentation</a>
       <a class="btn btn-primary btn-large" href="http://flask.pocoo.org"><i class="icon-info-sign icon-white"></i> Lean more about Flask</a>
     </p>
+    -->
   </div>
   <div class="row">
     <div class="span4">
