--- a/testsite/app/templates/layouts/boilerplate.html
+++ b/testsite/app/templates/layouts/boilerplate.html
@@ -23,6 +23,9 @@
   <script src="/static/js/leaflet.js"></script>
   <script src="/static/js/underscore-min.js"></script>
   <script src="/static/js/backbone.js"></script>
+  <script src="/static/js/spin.min.js"></script>
+  <script src="/static/js/leaflet.spin.js"></script>
+  <script src="/static/js/backbone.js"></script>
   <!--<script src="/static/js/jquery.ui.core.min.js"></script>
   <script src="/static/js/jquery.ui.widget.min.js"></script>
   <script src="/static/js/jquery.ui.menu.min.js"></script>
