--- a/testsite/app/templates/layouts/boilerplate.html
+++ b/testsite/app/templates/layouts/boilerplate.html
@@ -15,6 +15,7 @@
   <link href="/static/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
   <link rel="stylesheet" href="/static/css/leaflet.css" />
+  <link rel="stylesheet" href="/static/css/zetashapes.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
       <![endif]-->
