--- a/testsite/app/templates/index.html
+++ b/testsite/app/templates/index.html
@@ -28,34 +28,10 @@
         </ul>
       </div>
     </div>
-    <div class="span4">
+    <div class="span8">
       <div class="well repo-info">
-        <h2>Flask-Social</h2>
-        <ul class="repo-actions">
-          <li>
-            <iframe src="http://ghbtns.com/github-btn.html?user=mattupstate&repo=flask-social&type=watch&count=true&size=large"
-                    allowtransparency="true" frameborder="0" scrolling="0" width="130px" height="30px"></iframe>
-          </li>
-          <!-- <li>
-            <iframe src="http://ghbtns.com/github-btn.html?user=mattupstate&repo=flask-social&type=fork&count=true&size=large"
-                    allowtransparency="true" frameborder="0" scrolling="0" width="120px" height="30px"></iframe></p>
-          </li> -->
-        </ul>
-      </div>
-    </div>
-    <div class="span4">
-      <div class="well repo-info">
-        <h2>This Website</h2>
-        <ul class="repo-actions">
-          <li>
-            <iframe src="http://ghbtns.com/github-btn.html?user=mattupstate&repo=flask-social-example&type=watch&count=true&size=large"
-                    allowtransparency="true" frameborder="0" scrolling="0" width="130px" height="30px"></iframe>
-          </li>
-          <!-- <li>
-            <iframe src="http://ghbtns.com/github-btn.html?user=mattupstate&repo=flask-social-example&type=fork&count=true&size=large"
-                    allowtransparency="true" frameborder="0" scrolling="0" width="120px" height="30px"></iframe></p>
-          </li> -->
-        </ul>
+        <h2>Search for a placel</h2>
+         {% include "_place_search.html" %}
       </div>
     </div>
   </div>
