--- a/testsite/app/static/css/zetashapes.css
+++ b/testsite/app/static/css/zetashapes.css
@@ -1,3 +1,11 @@
+#spinner {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 200000;
+  display: none;
+}
+
 .controls {
   position: absolute;
   top: 5px;
@@ -20,3 +28,6 @@ box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.5);
         background: white;
   width: 130px;
 }
+
+.controls.neighborhoodMode .exitBlockMode { display: none }
+.controls.blockMode .neighborhoodControls { display: none }
