--- a/testsite/app/templates/index.html
+++ b/testsite/app/templates/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="span8">
       <div class="well repo-info">
-        <h2>Search for a placel</h2>
+        <h2>Search for a place</h2>
          {% include "_place_search.html" %}
       </div>
     </div>
