--- a/testsite/app/static/css/zetashapes.css
+++ b/testsite/app/static/css/zetashapes.css
@@ -1,3 +1,15 @@
+.titleHelp {
+  float: left
+}
+
+
+.neighborhoodInfo {
+  float: left
+  font-size: 2em;
+  font-weight: bold;
+  padding-left: 10px;
+}
+
 #spinner {
   position: fixed;
   top: 50%;
@@ -7,9 +19,12 @@
 }
 
 .controls {
-  position: absolute;
-  top: 5px;
-  right: 5px;
+position: fixed;
+top: 47px;
+height: 20px;
+right: 10%;
+width: 80%;
+overflow: hidden;
 
         padding: 10px;
         -webkit-border-radius: 15px;
@@ -26,8 +41,10 @@ box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.5);
 
         z-index: 50;
         background: white;
-  width: 130px;
 }
 
 .controls.neighborhoodMode .exitBlockMode { display: none }
 .controls.blockMode .neighborhoodControls { display: none }
+
+.neighborhoodControls.nohover .hover {display:none}
+.neighborhoodControls.hover .nohover {display:none}
