--- a/testsite/app/templates/layouts/boilerplate.html
+++ b/testsite/app/templates/layouts/boilerplate.html
@@ -19,6 +19,7 @@
       <![endif]-->
   <script src="/static/js/jquery-1.9.1.min.js"></script>
   <script src="/static/js/jquery-migrate-1.1.1.min.js"></script>
+  <script>L_PREFER_CANVAS = false;</script>
   <script src="/static/js/leaflet.js"></script>
   <script src="/static/js/underscore-min.js"></script>
   <script src="/static/js/backbone.js"></script>
