--- a/testsite/app/templates/_nav.html
+++ b/testsite/app/templates/_nav.html
@@ -11,6 +11,7 @@
         <li><a href="{{ url_for('security.login') }}">Log in</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
         {%- endif -%}
+        <li><a href="/license">License</a></li>
       </ul>
     </div>
   </div>
