make voting work again, use static areainfo files

--- a/testsite/app/templates/editor.html
+++ b/testsite/app/templates/editor.html
@@ -46,7 +46,7 @@
           <hr/>
           Removed blocks will remain unlabeled until you edit a different neighborhood and attach them there.
           <hr/>
-          To make a bigger addition, ctrl-click to begin drawing a polygon, and ctrl-click to end it. <br/>
+          To make a bigger addition, alt or command click to begin drawing a polygon, and alt or command click to end it. <br/>
           By default, the selection will be added to the existing neighborhood, this can be changed with
           <span class="light-keys"><kbd>r</kbd> for redraw mode, and <kbd>d</kbd> for delete mode, and <kbd>a</kbd> to get back to add.</span>
           <hr/>
