--- a/testsite/app/templates/register.html
+++ b/testsite/app/templates/register.html
@@ -14,10 +14,19 @@
 <div class="page-header">
   <h1>Register</h1>
 </div>
-{% if login_failed %}
-<h3>Register with your {{ provider.name }} account: {{ connection_values['display_name'] }}</h3>
-{% endif %}
 <div class="row content">
+{% if provider %}
+<h3>Register with your {{ provider.name }} account: {{ connection_values['display_name'] }}</h3>
+
+  <div class="span4 offset1">
+    <form class="well" action="{{ url_for('register', provider_id=provider.id if provider else None) }}" method="POST">
+      {{ form.hidden_tag() }}
+      {{ render_field(form.email) }}
+      <input type="hidden" name="login_failed" value="1"/>
+      <button type="submit" class="btn btn-primary btn-large">Register</button>
+    </form>
+  </div>
+{% else %}
   {% if not login_failed %}
   <div class="span4 col3">
     {{ social_register('twitter', 'Twitter' )}}
@@ -27,5 +36,6 @@
     <!-- {{ social_register('github', 'GitHub' )}} -->
   </div>
   {% endif %}
+{% endif %}
 </div>
 {% endblock %}
