try to fix a bunch of launch bugs -- postgres sync and bad queries and bad links

--- a/testsite/app/templates/index.html
+++ b/testsite/app/templates/index.html
@@ -46,7 +46,7 @@
         <li>possibly add a draw-from-scratch mode
         <li>highlight orphaned blocks
         <li>figure out how to balance user vs derived labels
-        <li>deal with overlapping/sub/macro neighborhoods
+        <li>deal with overlapping/fuzzy/micro/mega neighborhoods
         <li>reattach brooklyn piers to brooklyn (they belong to manhattan county) -- please send me other examples of this.
       </ul>
       </p>
