--- a/testsite/app/templates/register.html
+++ b/testsite/app/templates/register.html
@@ -32,7 +32,7 @@
     {{ social_register('twitter', 'Twitter' )}}
     {{ social_register('facebook', 'Facebook' )}}
     {{ social_register('google', 'Google' )}}
-    {{ social_register('foursquare', 'Foursquare' )}}
+    <!-- {{ social_register('foursquare', 'Foursquare' )}} -->
     <!-- {{ social_register('github', 'GitHub' )}} -->
   </div>
   {% endif %}
