--- a/testsite/app/templates/layouts/boilerplate.html
+++ b/testsite/app/templates/layouts/boilerplate.html
@@ -38,18 +38,16 @@
     }
   </script>
 
-  {% if google_analytics_id %}
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', '{{ google_analytics_id }}']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-  {% endif %}
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+ })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-41195525-1', 'zetashapes.com');
+ga('send', 'pageview');
+
+</script>
 </head>
 <body class="{% block body_class %}{% endblock %}">
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -58,7 +56,7 @@
     {% include "_messages.html" -%}
     {% block layout %}{% endblock -%}
     <footer class="footer">
-      <p>Maintained by <a href="http://twitter.com/blackmad">@blackmad</a>, This site uses data from <a href="http://flickr.com">flickr</a>. <a href="https://github.com/blackmad/the-neighborhoods-project">Source code.</a> <a href="mailto:zetashapes@davidblackman.com">Email me.</a></p>
+      <p>Maintained by <a href="http://twitter.com/blackmad">@blackmad</a>, This site uses data from <a href="http://flickr.com">flickr</a>. <a href="https://github.com/blackmad/zetashapes">Source code.</a> <a href="mailto:zetashapes@davidblackman.com">Email me.</a></p>
     </footer>
   </div>
 </body>
