--- a/testsite/app/templates/login.html
+++ b/testsite/app/templates/login.html
@@ -18,7 +18,7 @@
   <div class="span4 col3">
     {{ social_login('twitter', 'Twitter' )}}
     {{ social_login('facebook', 'Facebook' )}}
-    <!-- {{ social_login('foursquare', 'Foursquare' )}} -->
+    {{ social_login('foursquare', 'Foursquare' )}}
     {{ social_login('google', 'Google' )}}
     <!-- {{ social_login('github', 'GitHub' )}} -->
   </div>
