--- a/testsite/app/templates/editor.html
+++ b/testsite/app/templates/editor.html
@@ -89,7 +89,7 @@
   <div class="modal-footer">
     <a href="#" class="btn closeButton">Cancel</a>
     <a href="#" class="btn btn-primary reassignButton">Delete and Reassign Blocks</a>
-    <a href="#" class="btn btn-primary deleteButton">Delete Neighborhood</a>
+    <a href="#" class="btn btn-primary deleteHoodButton">Delete Neighborhood</a>
   </div>
 </div>
 
