--- a/testsite/app/templates/editor.html
+++ b/testsite/app/templates/editor.html
@@ -7,7 +7,7 @@
       <div class="row-fluid">
         <div class="span12">
           <div id="map"></div>
-          <div class="alert alert-info" id="spinner">Loading ... (sorry, this takes a while to render)</div>
+          <div class="alert alert-info" id="spinner">Loading Neighborhoods ...</div>
         </div>
       </div>
       <span class="loginAlert alert" href="#">If you want to edit the map, please <a href="/login">login</a> <a class="close" data-dismiss="alert" href="#">&times;</a> </span>
