support adding hoods + a bunch of speedups

--- a/testsite/app/templates/index.html
+++ b/testsite/app/templates/index.html
@@ -37,17 +37,18 @@
   </div>
   <div class="row">
     <div class="span10 offset1">
-      <p>The neighborhodo project / zetashapes is an experiment in crowdsourced US neighborhood polygons. From here, you can download neighborhood boundaries for every city in the US derived from geotags on flickr photos. You can also edit these boundaries and download custom <a href="http://geojson.org">GeoJSON</a> with your edits applied. Your edits will also be contributed back into improving the overall boundaries.</p>
+      <p>Zetashapes is an experiment in crowdsourced US neighborhood polygons. From here, you can download neighborhood boundaries for every city in the US derived from geotags on flickr photos. You can also edit these boundaries and download custom <a href="http://geojson.org">GeoJSON</a> with your edits applied. Your edits will also be contributed back into improving the overall boundaries.</p>
 
       <p>still todo
       <ul>
-        <li>generate a nationwide file for download
         <li>allow adding new neighborhoods
+        <li>lazy loading of nearby counties
+        <li>build the 4sq game
+        <li>deal with overlapping/fuzzy/micro/mega neighborhoods
+        <li>generate a nationwide file for download
         <li>possibly add a draw-from-scratch mode
         <li>highlight orphaned blocks
         <li>figure out how to balance user vs derived labels
-        <li>deal with overlapping/fuzzy/micro/mega neighborhoods
-        <li>reattach brooklyn piers to brooklyn (they belong to manhattan county) -- please send me other examples of this.
       </ul>
       </p>
       
