--- a/testsite/app/templates/_nav.html
+++ b/testsite/app/templates/_nav.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="/">the-neighborhoods-project</a>
+      <a class="brand" href="/">zetashapes</a>
       <ul class="nav">
         <li><a href="{{ url_for('index') }}">Home</a></li>
         {%- if current_user.is_authenticated() -%}
