--- a/testsite/app/templates/editor.html
+++ b/testsite/app/templates/editor.html
@@ -16,6 +16,9 @@
         <div class="neighborhoodControls nohover">
           {%- if current_user.is_authenticated() -%}
             <span class="titleHelp nohover">Click on a neighborhood to edit its boundary</span>
+            <span class="addButtonContainer nohover">
+              <button type="button" class="addButton" class="btn btn-primary">Add missing neighborhood</button>
+            </span>
             <span class="downloadLink nohover"><a href="http://zetashapes.com/api/neighborhoodsByArea?areaid={{ areaid }}&key={{current_user.api_key }}&intent=download">download</a></span>
             <span class="titleHelp hover">Click to edit:</span> <span class="neighborhoodInfo hover"></span>
             <!--'Polygon mode': <button type="button" id="polygonMode" class="btn btn-primary" data-loading-text="Off" data-toggle="button">On</button>-->
@@ -92,6 +95,27 @@
     <a href="#" class="btn btn-primary deleteHoodButton">Delete Neighborhood</a>
   </div>
 </div>
+
+<div class="modal hide fade" id="neighborhoodAddModal">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Add a new neighborhood<span class="neighborhoodName"></span>?</h3>
+  </div>
+  <div class="modal-body">
+    <div class="ui-widget">
+      <p>Neighborhood: <input type="text" data-provide="typeahead" class="hoodEntry" id="hoodEntry" autocomplete="off" placeholder="Enter Name"></p>
+    </div>
+    <div class="ui-widget">
+      <p>In city: <select class="citySelect"></select></p>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn closeButton">Cancel</a>
+    <a href="#" class="btn btn-primary addButton">Add</a>
+  </div>
+</div>
+
+
 
 <div class="modal hide fade" id="loginModal">
   <div class="modal-header">
