--- a/testsite/app/templates/layouts/boilerplate.html
+++ b/testsite/app/templates/layouts/boilerplate.html
@@ -14,14 +14,15 @@
   <link href="/static/css/bootstrap.map.css" rel="stylesheet" media="screen">
   <link href="/static/css/bootstrap-responsive.css" rel="stylesheet" media="screen">
   <link rel="stylesheet" href="/static/css/leaflet.css" />
+  <link rel="stylesheet" href="/static/css/leaflet.label.css" />
   <link rel="stylesheet" href="/static/css/zetashapes.css" />
   <!--[if lte IE 8]>
       <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
       <![endif]-->
   <script src="/static/js/jquery-1.9.1.min.js"></script>
   <script src="/static/js/jquery-migrate-1.1.1.min.js"></script>
-  <script>L_PREFER_CANVAS = false;</script>
-  <script src="/static/js/leaflet.js"></script>
+  <script src="/static/js/leaflet-src.js"></script>
+  <script src="/static/js/leaflet.label-src.js"></script>
   <script src="/static/js/underscore-min.js"></script>
   <script src="/static/js/backbone.js"></script>
   <script src="/static/js/leaflet.spin.js"></script>
