--- a/testsite/app/templates/editor.html
+++ b/testsite/app/templates/editor.html
@@ -18,11 +18,11 @@
             <span class="titleHelp">Click on a neighborhood to edit its boundary or
               <a href="" class="addButton" class="btn btn-primary">Add missing neighborhood</a>
             </span>
-            <span class="downloadLink nohover"><a href="http://zetashapes.com/api/neighborhoodsByArea?areaid={{ areaid }}&key={{current_user.api_key }}&intent=download">download</a></span>
+            <span class="downloadLink nohover"><a href="/api/neighborhoodsByArea?areaid={{ areaid }}&key={{current_user.api_key }}&intent=download">download</a></span>
             <!--'Polygon mode': <button type="button" id="polygonMode" class="btn btn-primary" data-loading-text="Off" data-toggle="button">On</button>-->
           {%- else -%}
              <span class="neighborhoodInfo hover"></span>
-            <span class="downloadLink nohover"><a href="http://zetashapes.com/api/neighborhoodsByArea?areaid={{ areaid }}&key={{current_user.api_key }}&intent=download">download</a></span>
+            <span class="downloadLink nohover"><a href="/api/neighborhoodsByArea?areaid={{ areaid }}&key={{current_user.api_key }}&intent=download">download</a></span>
           {%- endif -%}
         </div>
 
